kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dave
  labels:
    app: dave
    version: "2.0"
