kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dave
  namespace: dave
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
  - host: dave.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dave
            port:
              number: 5000
  - host: dave-gui.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dave
            port:
              number: 3000
